--- a/consultas.html
+++ b/consultas.html
@@ -1,185 +1,365 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-  <meta charset="UTF-8" />
-  <title>Consultas sindicales · Herramientas FECCCOOEx</title>
+  <meta charset="UTF-8">
+  <title>Consultas sindicales · Herramientas FECCOOEx</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
   <style>
-    * { box-sizing: border-box; }
-    body {
-      margin: 0;
-      font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", sans-serif;
-      background: #f7f7f7;
-      color: #222;
+    *{box-sizing:border-box}
+    body{
+      margin:0;
+      font-family:system-ui,-apple-system,BlinkMacSystemFont,"Segoe UI",sans-serif;
+      background:#f3f4f6;
+      color:#222;
     }
 
-    header {
-      display: flex;
-      align-items: center;
-      gap: 16px;
-      padding: 14px 24px;
-      background: #d60000;
-      color: #fff;
-      box-shadow: 0 2px 4px rgba(0,0,0,0.25);
+    /* HEADER */
+    header{
+      display:flex;
+      justify-content:space-between;
+      align-items:center;
+      padding:14px 24px;
+      background:#d60000;
+      color:#fff;
+      box-shadow:0 2px 6px rgba(0,0,0,.25);
     }
-    header img { height: 52px; }
-    header .titles h1 {
-      margin: 0;
-      font-size: 1.5rem;
-      font-weight: 700;
-    }
-    header .titles p {
-      margin: 2px 0 0;
-      font-size: 0.9rem;
-      opacity: 0.9;
-    }
-
-    main {
-      max-width: 800px;
-      margin: 24px auto 40px;
-      padding: 0 16px;
+    header img{height:52px}
+    .titles h1{margin:0;font-size:1.6rem}
+    .titles p{margin:2px 0 0;font-size:.9rem}
+    nav a{
+      color:#fff;
+      text-decoration:none;
+      font-weight:700;
+      padding:6px 12px;
+      border:1px solid rgba(255,255,255,.7);
+      border-radius:999px;
     }
 
-    .block {
-      background: #fff;
-      border-radius: 8px;
-      padding: 18px 20px;
-      margin-bottom: 18px;
-      box-shadow: 0 2px 6px rgba(0,0,0,0.06);
-      transition: transform 0.15s ease, box-shadow 0.15s ease;
-    }
-    .block:hover {
-      transform: translateY(-2px);
-      box-shadow: 0 4px 10px rgba(0,0,0,0.12);
-    }
-    .block h2 {
-      margin: 0 0 8px;
-      font-size: 1.25rem;
-      color: #d60000;
-    }
-    .block p {
-      margin: 0 0 8px;
-      font-size: 0.95rem;
-      color: #444;
+    /* MAIN */
+    main{
+      max-width:980px;
+      margin:26px auto;
+      padding:0 16px;
     }
 
-    form {
-      display: flex;
-      flex-direction: column;
-      gap: 10px;
-      margin-top: 8px;
-    }
-    label {
-      font-size: 0.85rem;
-      font-weight: 600;
-    }
-    input[type="text"],
-    input[type="email"],
-    select,
-    textarea {
-      width: 100%;
-      padding: 7px 8px;
-      font-size: 0.9rem;
-      border-radius: 4px;
-      border: 1px solid #ccc;
-    }
-    textarea {
-      min-height: 130px;
-      resize: vertical;
-    }
-    button {
-      align-self: flex-start;
-      padding: 7px 14px;
-      font-size: 0.9rem;
-      border-radius: 4px;
-      border: none;
-      background: #d60000;
-      color: #fff;
-      font-weight: 600;
-      cursor: pointer;
-      margin-top: 4px;
-    }
-    button:hover {
-      background: #b40000;
+    .btn-volver{
+      display:inline-block;
+      margin-bottom:16px;
+      padding:6px 10px;
+      background:#d60000;
+      color:#fff;
+      border-radius:6px;
+      text-decoration:none;
+      font-weight:700;
     }
 
-    .note {
-      margin-top: 8px;
-      font-size: 0.8rem;
-      color: #666;
+    h1{margin:0 0 6px}
+    .subtitle{
+      margin:0 0 14px;
+      color:#444;
+      font-size:.95rem;
     }
 
-    footer {
-      font-size: 0.75rem;
-      text-align: center;
-      padding: 12px;
-      color: #444;
-      border-top: 1px solid #e0e0e0;
-      background: #fafafa;
+    .card{
+      background:#fff;
+      border-radius:12px;
+      padding:16px;
+      box-shadow:0 3px 10px rgba(0,0,0,.1);
     }
-    footer img {
-      height: 22px;
-      vertical-align: middle;
-      margin-right: 6px;
+
+    label{
+      display:block;
+      margin-top:10px;
+      font-weight:800;
+      font-size:.82rem;
+      color:#555;
+    }
+
+    input,select,textarea{
+      width:100%;
+      padding:9px 10px;
+      margin-top:4px;
+      border-radius:10px;
+      border:1px solid #cbd5e1;
+      font-size:.95rem;
+    }
+    textarea{min-height:140px}
+
+    .row2{
+      display:grid;
+      grid-template-columns:1fr 1fr;
+      gap:10px;
+    }
+    @media(max-width:800px){
+      .row2{grid-template-columns:1fr}
+    }
+
+    .notice{
+      background:#f9fafb;
+      border:1px dashed #e5e7eb;
+      border-radius:10px;
+      padding:10px;
+      font-size:.88rem;
+      color:#444;
+      margin-bottom:10px;
+    }
+
+    .actions{
+      display:flex;
+      gap:10px;
+      flex-wrap:wrap;
+      margin-top:14px;
+    }
+
+    .btn{
+      border:none;
+      border-radius:10px;
+      padding:10px 14px;
+      font-weight:900;
+      cursor:pointer;
+    }
+    .btn-primary{
+      background:#d60000;
+      color:#fff;
+    }
+    .btn-secondary{
+      background:#111827;
+      color:#fff;
+      text-decoration:none;
+      display:inline-block;
+    }
+
+    .ok,.err{
+      display:none;
+      margin-top:12px;
+      padding:10px;
+      border-radius:10px;
+      font-weight:800;
+    }
+    .ok{
+      background:#ecfdf5;
+      border:1px solid #a7f3d0;
+      color:#065f46;
+    }
+    .err{
+      background:#fef2f2;
+      border:1px solid #fecaca;
+      color:#7f1d1d;
+    }
+
+    /* FOOTER */
+    footer{
+      background:#222;
+      color:#eee;
+      margin-top:30px;
+      padding:18px 20px;
+      border-top:3px solid #d60000;
+      font-size:.82rem;
+    }
+    .footer-inner{
+      max-width:1200px;
+      margin:0 auto;
+      display:grid;
+      grid-template-columns:2fr 1fr 1fr;
+      gap:16px;
+    }
+    @media(max-width:900px){
+      .footer-inner{grid-template-columns:1fr}
+    }
+    .footer-inner img{
+      height:30px;
+      background:#d60000;
+      padding:4px 6px;
+      border-radius:4px;
+    }
+    .footer-inner a{color:#ffdddd;text-decoration:none}
+
+    .footer-bottom{
+      margin-top:10px;
+      border-top:1px solid #444;
+      padding-top:6px;
+      display:flex;
+      justify-content:space-between;
+      align-items:center;
+      flex-wrap:wrap;
+      gap:6px;
     }
   </style>
 </head>
+
 <body>
 
-  <header>
+<header>
+  <div style="display:flex;gap:16px;align-items:center">
     <img src="img/feccooex.png" alt="FECCOOEx">
     <div class="titles">
-      <h1>Consultas sindicales</h1>
-      <p>Canal para plantear dudas sobre condiciones laborales y normativa</p>
+      <h1>Herramientas FECCOOEx</h1>
+      <p>Recursos sindicales para la comunidad educativa</p>
     </div>
-  </header>
+  </div>
+  <nav>
+    <a href="delegados.html">Área delegados/as</a>
+  </nav>
+</header>
 
-  <main>
-    <section class="block">
-      <h2>Envío de consultas</h2>
-      <p>
-        A través de este formulario se pueden plantear consultas relacionadas con la situación laboral en los centros
-        educativos, dudas sobre la normativa o cuestiones organizativas.
-      </p>
+<main>
+  <a class="btn-volver" href="index.html">Volver a la portada</a>
 
-      <!-- Sustituye "tu_correo@ccoo.es" por el correo real de recepción -->
-      <form action="mailto:tu_correo@ccoo.es" method="post" enctype="text/plain">
-        <label for="nombre">Nombre (opcional)</label>
-        <input type="text" id="nombre" name="Nombre" />
+  <h1>Consultas sindicales</h1>
+  <p class="subtitle">
+    A través de este formulario se pueden plantear las consultas y sugerencias de carácter laboral que se consideren.
+  </p>
 
-        <label for="correo">Correo electrónico de contacto</label>
-        <input type="email" id="correo" name="Correo" required />
+  <section class="card">
+    <div class="notice">
+      <strong>Protección de datos:</strong>
+      los datos aportados se utilizarán exclusivamente para atender esta consulta y gestionar la respuesta.
+    </div>
 
-        <label for="centro">Centro de trabajo</label>
-        <input type="text" id="centro" name="Centro" />
+    <!-- FORMULARIO SIN ACTION -->
+    <form id="form-consultas">
 
-        <label for="tema">Tema principal</label>
-        <select id="tema" name="Tema">
-          <option value="">Selecciona un tema</option>
-          <option value="Jornada y horarios">Jornada y horarios</option>
-          <option value="Permisos y licencias">Permisos y licencias</option>
-          <option value="Retribuciones">Retribuciones</option>
-          <option value="Plantillas y organización de centro">Plantillas y organización de centro</option>
-          <option value="Prevención de riesgos laborales">Prevención de riesgos laborales</option>
-          <option value="Otro">Otro</option>
-        </select>
+      <div class="row2">
+        <div>
+          <label>Nombre y apellidos</label>
+          <input id="nombre" required>
+        </div>
+        <div>
+          <label>Correo electrónico</label>
+          <input id="correo" type="email" required>
+        </div>
+      </div>
 
-        <label for="consulta">Describe tu consulta</label>
-        <textarea id="consulta" name="Consulta" required></textarea>
+      <div class="row2">
+        <div>
+          <label>Teléfono (opcional)</label>
+          <input id="telefono">
+        </div>
+        <div>
+          <label>Tema principal</label>
+          <select id="tema" required>
+            <option value="">Selecciona un tema</option>
+            <option>Jornada y horarios</option>
+            <option>Permisos y licencias</option>
+            <option>Retribuciones</option>
+            <option>Interinos</option>
+            <option>Conciliación</option>
+            <option>Salud laboral</option>
+            <option>Otros</option>
+          </select>
+        </div>
+      </div>
 
-        <button type="submit">Enviar consulta</button>
-      </form>
+      <label>Centro de trabajo (opcional)</label>
+      <input id="centro">
 
-      <p class="note">
-        No incluyas datos especialmente sensibles o clínicos. Este canal sirve para derivar tu consulta a la Federación
-        de Enseñanza de CCOO Extremadura y facilitar una primera orientación.
-      </p>
-    </section>
-  </main>
+      <label>Consulta o sugerencia</label>
+      <textarea id="mensaje" required></textarea>
 
-  <footer>
-    <img src="https://licensebuttons.net/l/by-nd/4.0/88x31.png" alt="Licencia CC BY-ND">
-    Este contenido se distribuye bajo licencia <strong>Creative Commons BY-ND 4.0</strong>, permitiendo compartir sin modificaciones y con atribución.
-  </footer>
+      <!-- honeypot -->
+      <input id="website" style="display:none">
+
+      <div class="actions">
+        <button id="btn-enviar" type="button" class="btn btn-primary">
+          Enviar consulta
+        </button>
+        <a class="btn btn-secondary"
+           href="mailto:educacion@extremadura.ccoo.es">
+           Escribir desde mi correo
+        </a>
+      </div>
+
+      <div id="ok" class="ok">Consulta enviada correctamente.</div>
+      <div id="err" class="err">No se pudo enviar la consulta.</div>
+    </form>
+  </section>
+</main>
+
+<footer>
+  <div class="footer-inner">
+    <div>
+      <img src="img/feccooex.png">
+      <p><strong>Federación de Enseñanza de CCOO de Extremadura</strong></p>
+      <p>Herramientas digitales para la acción sindical.</p>
+    </div>
+    <div>
+      <p><strong>Contacto</strong></p>
+      <p>Avenida Juan Carlos I, 47 · Mérida</p>
+      <p>924 33 00 18</p>
+      <p><a href="mailto:educacion@extremadura.ccoo.es">educacion@extremadura.ccoo.es</a></p>
+    </div>
+    <div>
+      <p><strong>Redes</strong></p>
+      <p><a href="https://extremadura.fe.ccoo.es/" target="_blank">Web</a></p>
+      <p><a href="https://www.facebook.com/feccooex" target="_blank">Facebook</a></p>
+      <p><a href="https://x.com/FECCOOex" target="_blank">X</a></p>
+      <p><a href="https://www.instagram.com/feccooex" target="_blank">Instagram</a></p>
+      <p><a href="https://t.me/feccooextremadura" target="_blank">Telegram</a></p>
+    </div>
+  </div>
+
+  <div class="footer-bottom">
+    <div>
+      <img src="https://licensebuttons.net/l/by-nd/4.0/88x31.png">
+      CC BY-ND 4.0
+    </div>
+    <div>
+      © <span id="anio"></span> FECCOOEx
+    </div>
+  </div>
+</footer>
+
+<script>
+  document.getElementById("anio").textContent = new Date().getFullYear();
+
+  const btn = document.getElementById("btn-enviar");
+  const ok = document.getElementById("ok");
+  const err = document.getElementById("err");
+
+  btn.addEventListener("click", async () => {
+    ok.style.display = "none";
+    err.style.display = "none";
+
+    const payload = {
+      nombre: nombre.value.trim(),
+      correo: correo.value.trim(),
+      telefono: telefono.value.trim(),
+      tema: tema.value,
+      centro: centro.value.trim(),
+      mensaje: mensaje.value.trim(),
+      website: website.value.trim()
+    };
+
+    if (!payload.nombre || !payload.correo || !payload.tema || !payload.mensaje) {
+      err.textContent = "Faltan campos obligatorios.";
+      err.style.display = "block";
+      return;
+    }
+
+    btn.disabled = true;
+    btn.textContent = "Enviando…";
+
+    try {
+      const r = await fetch("/api/consultas", {
+        method: "POST",
+        headers: {"Content-Type":"application/json"},
+        body: JSON.stringify(payload)
+      });
+      const data = await r.json();
+
+      if (!r.ok || !data.ok) throw new Error();
+
+      ok.style.display = "block";
+      form.reset();
+    } catch {
+      err.style.display = "block";
+    } finally {
+      btn.disabled = false;
+      btn.textContent = "Enviar consulta";
+    }
+  });
+</script>
 
 </body>
 </html>
