--- a/consultas.html
+++ b/consultas.html
@@ -1,86 +1,258 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-  <meta charset="UTF-8">
+  <meta charset="UTF-8" />
   <title>Consultas sindicales · Herramientas FECCOOEx</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
   <style>
-    *{box-sizing:border-box}
-    body{margin:0;font-family:system-ui,-apple-system,BlinkMacSystemFont,"Segoe UI",sans-serif;background:#f3f4f6;color:#222}
-
-    header{
-      display:flex;justify-content:space-between;align-items:center;
-      padding:14px 24px;background:#d60000;color:#fff;
-      box-shadow:0 2px 6px rgba(0,0,0,.25);position:sticky;top:0;z-index:10
+    * { box-sizing: border-box; }
+    body{
+      margin:0;
+      font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", sans-serif;
+      background:#f3f4f6;
+      color:#222;
     }
-    header img{height:52px}
-    .titles h1{margin:0;font-size:1.6rem}
-    .titles p{margin:2px 0 0;font-size:.9rem;opacity:.95}
-    nav a{color:#fff;text-decoration:none;font-weight:700;padding:6px 12px;border:1px solid rgba(255,255,255,.7);border-radius:999px}
 
-    main{max-width:980px;margin:26px auto;padding:0 16px 40px}
-    .btn-volver{display:inline-block;margin-bottom:16px;padding:6px 10px;background:#d60000;color:#fff;border-radius:6px;text-decoration:none;font-weight:700}
+    /* HEADER */
+    header{
+      display:flex;
+      align-items:center;
+      justify-content:space-between;
+      padding:14px 24px;
+      background:#d60000;
+      color:#fff;
+      box-shadow:0 2px 6px rgba(0,0,0,0.25);
+      position:sticky;
+      top:0;
+      z-index:10;
+    }
+    header img{ height:52px; }
+    .titles h1{ margin:0; font-size:1.6rem; font-weight:700; }
+    .titles p{ margin:2px 0 0; font-size:0.9rem; opacity:0.95; }
+    nav a{
+      color:#fff; text-decoration:none; font-weight:700;
+      padding:6px 12px; border:1px solid rgba(255,255,255,0.7);
+      border-radius:999px;
+    }
 
-    h1{margin:0 0 6px}
-    .subtitle{margin:0 0 14px;color:#444;font-size:.95rem;line-height:1.25rem}
+    /* MAIN */
+    main{
+      max-width: 980px;
+      margin: 26px auto 40px;
+      padding: 0 16px 40px;
+    }
 
-    .card{background:#fff;border-radius:12px;padding:16px;box-shadow:0 3px 10px rgba(0,0,0,.1);border:1px solid #e1e4ea}
+    .btn-volver{
+      display:inline-block;
+      margin-bottom:16px;
+      padding:6px 10px;
+      border-radius:6px;
+      background:#d60000;
+      color:#fff;
+      font-size:0.9rem;
+      font-weight:800;
+      text-decoration:none;
+    }
 
-    label{display:block;margin-top:10px;font-weight:800;font-size:.82rem;color:#555}
-    input,select,textarea{width:100%;padding:9px 10px;margin-top:4px;border-radius:10px;border:1px solid #cbd5e1;font-size:.95rem}
-    textarea{min-height:140px;resize:vertical}
+    .page-title{ margin: 0 0 6px; font-size:1.6rem; }
+    .page-subtitle{
+      margin:0 0 14px;
+      color:#444;
+      font-size:0.95rem;
+      line-height:1.25rem;
+    }
 
-    .row2{display:grid;grid-template-columns:1fr 1fr;gap:10px}
-    @media(max-width:800px){.row2{grid-template-columns:1fr}}
+    .card{
+      background:#fff;
+      border:1px solid #e1e4ea;
+      border-radius: 12px;
+      box-shadow:0 3px 10px rgba(0,0,0,0.10);
+      padding: 14px 16px 16px;
+      margin-bottom: 14px;
+    }
 
     .notice{
-      background:#f9fafb;border:1px dashed #e5e7eb;border-radius:10px;
-      padding:10px;font-size:.88rem;color:#444;margin-bottom:10px;line-height:1.25rem
+      background:#f9fafb;
+      border: 1px dashed #e5e7eb;
+      border-radius: 12px;
+      padding: 10px 12px;
+      color:#4b5563;
+      font-size:0.88rem;
+      line-height:1.25rem;
+      margin-bottom:10px;
     }
 
-    .actions{display:flex;gap:10px;flex-wrap:wrap;margin-top:14px}
-    .btn{border:none;border-radius:10px;padding:10px 14px;font-weight:900;cursor:pointer}
-    .btn-primary{background:#d60000;color:#fff}
-    .btn:disabled{opacity:.6;cursor:not-allowed}
+    label{
+      font-size:0.82rem;
+      font-weight:900;
+      color:#555;
+      display:block;
+      margin:10px 0 4px;
+    }
+    input, select, textarea{
+      width:100%;
+      font-family: inherit;
+      font-size:0.95rem;
+      padding: 9px 10px;
+      border-radius: 10px;
+      border:1px solid #cbd5e1;
+      background:#fff;
+    }
+    textarea{ min-height: 140px; resize: vertical; }
 
-    .ok,.err{display:none;margin-top:12px;padding:10px;border-radius:10px;font-weight:800;line-height:1.25rem}
-    .ok{background:#ecfdf5;border:1px solid #a7f3d0;color:#065f46}
-    .err{background:#fef2f2;border:1px solid #fecaca;color:#7f1d1d}
+    .row2{
+      display:grid;
+      grid-template-columns: 1fr 1fr;
+      gap: 10px;
+    }
+    @media (max-width: 860px){
+      .row2{ grid-template-columns: 1fr; }
+    }
 
-    footer{background:#222;color:#eee;margin-top:30px;padding:18px 20px;border-top:3px solid #d60000;font-size:.82rem}
-    .footer-inner{max-width:1200px;margin:0 auto;display:grid;grid-template-columns:2fr 1fr 1fr;gap:16px}
-    @media(max-width:900px){.footer-inner{grid-template-columns:1fr}}
-    .footer-inner img{height:30px;background:#d60000;padding:4px 6px;border-radius:4px}
-    .footer-inner a{color:#ffdddd;text-decoration:none}
-    .footer-inner a:hover{text-decoration:underline}
+    .actions{
+      display:flex;
+      gap:10px;
+      flex-wrap:wrap;
+      margin-top: 12px;
+      align-items:center;
+    }
+    .btn{
+      border:none;
+      border-radius: 10px;
+      padding: 10px 14px;
+      font-weight:900;
+      cursor:pointer;
+      text-decoration:none;
+      display:inline-block;
+    }
+    .btn-primary{
+      background:#d60000;
+      color:#fff;
+    }
+    .btn:disabled{
+      opacity:0.6;
+      cursor:not-allowed;
+    }
+
+    .ok{
+      display:none;
+      background:#ecfdf5;
+      border:1px solid #a7f3d0;
+      color:#065f46;
+      border-radius:12px;
+      padding:10px 12px;
+      font-weight:800;
+      margin-top:12px;
+    }
+    .err{
+      display:none;
+      background:#fef2f2;
+      border:1px solid #fecaca;
+      color:#7f1d1d;
+      border-radius:12px;
+      padding:10px 12px;
+      font-weight:800;
+      margin-top:12px;
+    }
+
+    /* FOOTER institucional (unificado) */
+    footer{
+      background:#222;
+      color:#f2f2f2;
+      padding:18px 20px 10px;
+      border-top:3px solid #d60000;
+      font-size:0.85rem;
+      margin-top: 10px;
+    }
+    .footer-inner{
+      max-width:1300px;
+      margin:0 auto;
+      display:grid;
+      grid-template-columns: 2fr 1.2fr 1.2fr;
+      gap:16px;
+    }
+    @media (max-width: 900px){
+      .footer-inner{ grid-template-columns: 1fr; }
+    }
+    .footer-col h3{
+      margin:0 0 6px;
+      font-size:0.95rem;
+      text-transform:uppercase;
+      letter-spacing:0.03em;
+      color:#fff;
+    }
+    .footer-col p{
+      margin:0 0 4px;
+      font-size:0.82rem;
+      color:#e0e0e0;
+      line-height:1.2rem;
+    }
+    .footer-col a{
+      color:#ffdddd;
+      text-decoration:none;
+      font-size:0.82rem;
+    }
+    .footer-col a:hover{ text-decoration:underline; }
+
+    .footer-logo-row{
+      display:flex;
+      align-items:center;
+      gap:10px;
+      margin-bottom:6px;
+    }
+    .footer-logo-row img{
+      height:30px;
+      background:#d60000;
+      padding:3px 6px;
+      border-radius:4px;
+    }
 
     .footer-bottom{
-      margin-top:10px;border-top:1px solid #444;padding-top:6px;
-      display:flex;justify-content:space-between;align-items:center;flex-wrap:wrap;gap:6px
+      max-width:1300px;
+      margin:10px auto 0;
+      border-top:1px solid #444;
+      padding-top:6px;
+      display:flex;
+      justify-content:space-between;
+      align-items:center;
+      gap:8px;
+      flex-wrap:wrap;
     }
-    .cc-row{display:flex;align-items:center;gap:6px}
-    .cc-row img{height:18px}
+    .footer-bottom-left{
+      display:flex;
+      align-items:center;
+      gap:6px;
+      font-size:0.78rem;
+      color:#e0e0e0;
+    }
+    .footer-bottom-left img{ height:18px; }
+    .footer-bottom-right{
+      font-size:0.78rem;
+      color:#bbbbbb;
+    }
   </style>
 </head>
 
 <body>
 <header>
-  <div style="display:flex;gap:16px;align-items:center">
+  <div style="display:flex; align-items:center; gap:16px;">
     <img src="img/feccooex.png" alt="FECCOOEx">
     <div class="titles">
       <h1>Herramientas FECCOOEx</h1>
-      <p>Recursos sindicales para la comunidad educativa</p>
+      <p>Recursos públicos y sindicales para la comunidad educativa</p>
     </div>
   </div>
-  <nav><a href="delegados.html">Área delegados/as</a></nav>
+  <nav>
+    <a href="delegados.html">Área delegados/as</a>
+  </nav>
 </header>
 
 <main>
   <a class="btn-volver" href="index.html">Volver a la portada</a>
 
-  <h1>Consultas sindicales</h1>
-  <p class="subtitle">
+  <h1 class="page-title">Consultas sindicales</h1>
+  <p class="page-subtitle">
     A través de este formulario se pueden plantear las consultas y sugerencias de carácter laboral que se consideren.
   </p>
 
@@ -94,18 +266,18 @@
       <div class="row2">
         <div>
           <label for="nombre">Nombre y apellidos</label>
-          <input id="nombre" required>
+          <input id="nombre" required />
         </div>
         <div>
           <label for="correo">Correo electrónico</label>
-          <input id="correo" type="email" required>
+          <input id="correo" type="email" required />
         </div>
       </div>
 
       <div class="row2">
         <div>
           <label for="telefono">Teléfono (opcional)</label>
-          <input id="telefono">
+          <input id="telefono" />
         </div>
         <div>
           <label for="tema">Tema principal</label>
@@ -123,13 +295,13 @@
       </div>
 
       <label for="centro">Centro de trabajo (opcional)</label>
-      <input id="centro">
+      <input id="centro" />
 
       <label for="mensaje">Consulta o sugerencia</label>
       <textarea id="mensaje" required></textarea>
 
       <!-- honeypot anti-spam -->
-      <input id="website" style="display:none" autocomplete="off">
+      <input id="website" style="display:none" autocomplete="off" />
 
       <div class="actions">
         <button id="btn-enviar" type="button" class="btn btn-primary">Enviar consulta</button>
@@ -143,38 +315,50 @@
 
 <footer>
   <div class="footer-inner">
-    <div>
-      <img src="img/feccooex.png" alt="FECCOOEx">
-      <p><strong>Federación de Enseñanza de CCOO de Extremadura</strong></p>
-      <p>Herramientas digitales para la acción sindical.</p>
+    <div class="footer-col">
+      <div class="footer-logo-row">
+        <img src="img/feccooex.png" alt="FECCOOEx">
+        <div>
+          <strong>Federación de Enseñanza de CCOO de Extremadura</strong><br>
+          <span style="font-size:0.8rem;">Herramientas digitales para la acción sindical y la comunidad educativa.</span>
+        </div>
+      </div>
+      <p>Este espacio reúne recursos públicos y sindicales para mejorar las condiciones de trabajo y la calidad de la educación en Extremadura.</p>
     </div>
-    <div>
-      <p><strong>Contacto</strong></p>
-      <p>Avenida Juan Carlos I, núm. 47 · CP 06800 · Mérida (Extremadura)</p>
-      <p>924 33 00 18</p>
-      <p><a href="mailto:educacion@extremadura.ccoo.es">educacion@extremadura.ccoo.es</a></p>
+
+    <div class="footer-col">
+      <h3>Contacto</h3>
+      <p><strong>Dirección:</strong><br>
+        Avenida Juan Carlos I, núm. 47<br>
+        CP 06800 · Mérida (Extremadura)
+      </p>
+      <p><strong>Teléfono:</strong> 924330018</p>
+      <p><strong>Correo:</strong> <a href="mailto:educacion@extremadura.ccoo.es">educacion@extremadura.ccoo.es</a></p>
     </div>
-    <div>
-      <p><strong>Redes</strong></p>
-      <p><a href="https://extremadura.fe.ccoo.es/" target="_blank">Web</a></p>
-      <p><a href="https://www.facebook.com/feccooex" target="_blank">Facebook</a></p>
-      <p><a href="https://x.com/FECCOOex" target="_blank">X</a></p>
-      <p><a href="https://www.instagram.com/feccooex" target="_blank">Instagram</a></p>
-      <p><a href="https://t.me/feccooextremadura" target="_blank">Telegram</a></p>
+
+    <div class="footer-col">
+      <h3>Enlaces rápidos</h3>
+      <p><a href="https://extremadura.fe.ccoo.es/" target="_blank">Web FECCOOExtremadura</a></p>
+      <p><a href="https://www.facebook.com/feccooex" target="_blank">Facebook FECCOOEx</a></p>
+      <p><a href="https://x.com/FECCOOex" target="_blank">X (Twitter) FECCOOEx</a></p>
+      <p><a href="https://www.instagram.com/feccooex" target="_blank">Instagram FECCOOEx</a></p>
+      <p><a href="https://t.me/feccooextremadura" target="_blank">Canal de Telegram FECCOOExtremadura</a></p>
     </div>
   </div>
 
   <div class="footer-bottom">
-    <div class="cc-row">
-      <img src="https://licensebuttons.net/l/by-nd/4.0/88x31.png" alt="CC BY-ND 4.0">
-      <span>Contenido bajo licencia Creative Commons BY-ND 4.0</span>
+    <div class="footer-bottom-left">
+      <img src="https://licensebuttons.net/l/by-nd/4.0/88x31.png" alt="Licencia CC BY-ND">
+      <span>Contenido bajo licencia Creative Commons BY-ND 4.0 (se permite compartir sin modificaciones y con atribución).</span>
     </div>
-    <div>© <span id="anio"></span> FECCOOEx</div>
+    <div class="footer-bottom-right">
+      © <span id="anio-footer"></span> Federación de Enseñanza de CCOO de Extremadura
+    </div>
   </div>
 </footer>
 
 <script>
-  document.getElementById("anio").textContent = new Date().getFullYear();
+  document.getElementById("anio-footer").textContent = new Date().getFullYear();
 
   const form = document.getElementById("form-consultas");
   const btn  = document.getElementById("btn-enviar");
@@ -245,6 +429,5 @@
     }
   });
 </script>
-
 </body>
 </html>
